--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Happy Teacher's Day</title>
+    <title>Happy Teacher's Day Sulabh Sir</title>
     <meta charset="utf-8" />
     <meta property="og:title" content="Happy Teacher's Day" />
     <meta
       property="og:description"
-      content="The knowledge you have imparted is the most beautiful gift ever given. Thank you, teacher."
+      content="The knowledge you have imparted is the most beautiful gift ever given. Thank you, Sulabh Sirji."
     />
     <meta
       property="og:image"
@@ -32,7 +32,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The knowledge you have imparted is the most beautiful gift ever given. Thank you, teacher."
+      content="The knowledge you have imparted is the most beautiful gift ever given. Thank you, Sulabh Sirji."
     />
   </head>
   <body>
@@ -40,12 +40,12 @@
       <div class="kotak-satu">
         <h1 class="from">From Your Most Handsome 😎</h1>
         <h1 class="x">and Funniest 😂 Student</h1>
-        <h1 class="cpdxseven">Murg Malai Tikka 🐔</h1>
+        <h1 class="cpdxseven">The one and only Sachin Rathore😎🔫</h1>
       </div>
       <div class="kotak-dua">
         <p class="p1">"</p>
         <p class="p2">
-          Happy Teachers' Day, Jayant Sir! 🎉 From you, I learned the true value
+          Happy Teachers' Day, Sulab Sir! 🎉 From you, I learned the true value
           of hard work and the realization that with dedication, anything is
           possible. 💪 This lesson is something I will carry with me for the
           rest of my life. I am deeply grateful to you. 🙏
@@ -58,8 +58,7 @@
       <div class="kotak-tiga">
         <div class="konten-satu">
           <h1 class="for">For</h1>
-          <h1 class="for">Jayant Sir</h1>
-          <h1 class="for">Birthday Treat Pending 🍰🎂</h1>
+          <h1 class="for">Sulabh Sir</h1>
         </div>
         <div class="konten-dua">
           <img src="img/300px.png" alt="logo" class="logo" />
