--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="konten-satu">
           <h1 class="for">For</h1>
           <h1 class="for">Sulabh Sir</h1>
+          <h1 class="for">By Sachin Rathore ☃️</h1>
         </div>
         <div class="konten-dua">
           <img src="img/300px.png" alt="logo" class="logo" />
