--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="kotak-dua">
         <p class="p1">"</p>
         <p class="p2">
-          Happy Teachers' Day, Sulab Sir! 🎉 From you, I learned the true value
+          Happy Teachers' Day, Sulabh Sir! 🎉 From you, I learned the true value
           of hard work and the realization that with dedication, anything is
           possible. 💪 This lesson is something I will carry with me for the
           rest of my life. I am deeply grateful to you. 🙏
